--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="title_home">Home</string>
     <string name="title_map">Map</string>
     <string name="title_chat">Chat</string>
-    <string name="title_activity_maps">Map</string>
+    <string name="title_activity_maps">Halifax Car Rental</string>
 
     <string name="google_maps_api_key">AIzaSyC8K02oTrZAD9lbrQpixOJkROInloCorsY</string>
 
